exports[`<LoginButtonComponent /> Matches snapshot when authed 1`] = `
<a
  href="/go"
  onClick={[Function]}>
  <button
    className="ui inverted right floated button"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      aria-hidden="true"
      className="dashboard icon"
      style={
        Object {
          "opacity": 1,
        }
      } />
    DASHBOARD
  </button>
</a>
`;

exports[`<LoginButtonComponent /> Matches snapshot when no authed 1`] = `
<a
  href="/login"
  onClick={[Function]}>
  <button
    className="ui inverted right floated button"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      aria-hidden="true"
      className="trophy icon"
      style={
        Object {
          "opacity": 1,
        }
      } />
    LOGIN
  </button>
</a>
`;
